# battleboosters-solana-contract

./: .prettierrc.js  Anchor.toml  README.md  package-lock.json  package.json
programs/battleboosters/: Cargo.toml
programs/battleboosters/src/: constants.rs  errors.rs  events.rs  lib.rs  processor.rs  types.rs  utils.rs
programs/battleboosters/src/state/: collect_rewards.rs  collector_pack.rs  create_spl_nft.rs  determine_ranking_points.rs  event.rs  event_request_randomness.rs  fight_card.rs  fighter.rs  fighter_base.rs  fighters.rs  global.rs  global_state.rs  join_fight_card.rs  mint_nft_from_game_asset.rs  mintable_game_asset.rs  minter.rs  mod.rs  mystery_box.rs  player.rs  price_feed.rs  program.rs  rank.rs  rarity.rs  refund_mintable_game_asset.rs  spl.rs  switchboard_callback.rs  tier_reward.rs  transaction_escrow.rs  transaction_escrow_v2.rs
tests/: 01_init.ts  01_initialize.ts  02_nftCollection.ts  02_purchase.ts  02_randomMintableGameAsset.ts  03_purchase.ts  03_randomMintableGameAsset.ts  04_createNftCollection.ts  04_mintableGameAsset.ts  04_nftCollection.ts  04_randomMintableGameAsset.ts  05_collector_pack.ts  05_event.ts  05_mintNftFromGameAsset.ts  06_event.ts  06_fight_card.ts  07_fightCard.ts  07_fight_card.ts  08_joinFightCard.ts  09_fighter.ts  09_fighterBase.ts  10_determineRankingPoints.ts  10_determine_ranking_points.ts  11_requestRandomness.ts  12_adminUpdateRanking.ts  12_collectRewards.ts  13_collectRewards.ts  admin_testing.ts  battleboosters.ts  create_event.ts  event.ts  fight_card.ts  initialize.ts  mint_nft.ts
tests/accounts/: pythSolUsdAccount.json
tests/utils/: account_init.ts  airdropSol.ts  airdrop_sol.ts  createMintableGameAsset.ts  createNftCollection.ts  createRandomMitableGameAssets.ts  createUpdateEvent.ts  createUpdateFightCard.ts  initAccounts.ts  initializePlayerAccount.ts  initialize_player_account.ts  joinFightCard.ts  lookupExample.ts  purchaseMysteryBox.ts
tests_utils/: 04_mintableGameAsset.ts  06_event.ts  07_fightCard.ts  09_fighterBase.ts  11_adminUpdateRanking.ts
tests_utils/utils/: createMintableGameAsset.ts  initAccounts.ts  purchaseMysteryBox.ts
testsss/: 01_initialize.ts  08_joinFightCard.ts  test.ts
testsss/utils/: createNftCollection.ts  createUpdateEvent.ts  prepareLookupTable.ts
