[package]
name = "battleboosters"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "battleboosters"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "=0.30.0", features= ["init-if-needed"]}
anchor-spl = {version = "=0.30.0", features = ["metadata"]}
#ahash = "=0.8.6"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.15"
sha2 = "0.10.8"
switchboard-on-demand =  { version = "0.1.8" }
bytemuck = "1.15.0"

